CADASTRO DE MEMBROS TELA

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 
-    <app-card-product></app-card-product>
+    <app-principal></app-principal>
 
 <app-footer></app-footer>
