começando ajuste tela mesmbro

--- a/src/app/membro/cadastrar-membro/cadastrar-membro.component.html
+++ b/src/app/membro/cadastrar-membro/cadastrar-membro.component.html
@@ -2,7 +2,6 @@
  
  <div class= "container" >
   
- 
    <div>
   <form>
   <div class="form-row">
@@ -56,8 +55,12 @@
   </div>
   <button type="submit" class="btn btn-primary">Entrar</button>
 </form>
-  
+<div>
+</div>
 
 <div>
+eweww
+</div>
+  <div>
 
 
