--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,9 +1,46 @@
  
  
- <div class= "container" >
-  
  
-   <div>
+  <div class="row">
+   <div class="col-sm-5 offset-sm-1 col-md-6 offset-md-0">
+   <table class="table">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Primeiro</th>
+       <th scope="col">#</th>
+      <th scope="col">Primeiro</th>
+      <th scope="col">Último</th>
+      <th scope="col">Nickname</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+      <td><button class="btn btn-primary">Delete</button></td>
+     
+         
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
+</table></div>
+   <div class ="col-sm-5 col-md-">
   <form>
   <div class="form-row">
     <div class="form-group col-md-6">
@@ -54,10 +91,15 @@
       </label>
     </div>
   </div>
-  <button type="submit" class="btn btn-primary">Entrar</button>
+  <button type="submit" class="btn btn-primary">Enviar</button>
+    <button type="submit" class="btn btn-primary">Cancelar</button>
 </form>
   
 
 <div>
+
+</div>
+
+
 
 
