ajuste tela membros

--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -3,15 +3,16 @@
  
   <div class="row">
    <div class="col-sm-5 offset-sm-1 col-md-6 offset-md-0">
+   
    <table class="table">
   <thead class="thead-dark">
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Primeiro</th>
-       <th scope="col">#</th>
-      <th scope="col">Primeiro</th>
-      <th scope="col">Último</th>
-      <th scope="col">Nickname</th>
+      <th scope="col">Nome</th>
+       <th scope="col">Email</th>
+      <th scope="col">Idade</th>
+     
+ 
     </tr>
   </thead>
   <tbody>
@@ -20,9 +21,10 @@
       <td>Mark</td>
       <td>Otto</td>
       <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-      <td><button class="btn btn-primary">Delete</button></td>
+      
+    
+      
+     
      
          
     </tr>
@@ -37,10 +39,12 @@
       <td>Larry</td>
       <td>the Bird</td>
       <td>@twitter</td>
+       <td><button class="btn btn-primary">Delete</button></td>
+         <td><button class="btn btn-primary">Editar</button></td>
     </tr>
   </tbody>
 </table></div>
-   <div class ="col-sm-5 col-md-">
+   <div class ="col-sm-6 col-md-">
   <form>
   <div class="form-row">
     <div class="form-group col-md-6">
@@ -84,13 +88,7 @@
   
   </div>
   <div class="form-group">
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="gridCheck">
-      <label class="form-check-label" for="gridCheck">
-        Clique em mim
-      </label>
-    </div>
-  </div>
+   </div>
   <button type="submit" class="btn btn-primary">Enviar</button>
     <button type="submit" class="btn btn-primary">Cancelar</button>
 </form>
