--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,75 +1,36 @@
  
+ <div class="container">
  
- 
-  <div class="row">
-   <div class="col-sm-5 offset-sm-1 col-md-6 offset-md-0">
+  <div class="row row-cols- 2">
    
-   <table class="table">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Nome</th>
-       <th scope="col">Email</th>
-      <th scope="col">Idade</th>
-     
- 
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>Mark</td>
-      
-    
-      
-     
-     
-         
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-       <td><button class="btn btn-primary">Delete</button></td>
-         <td><button class="btn btn-primary">Editar</button></td>
-    </tr>
-  </tbody>
-</table></div>
-   <div class ="col-sm-6 col-md-">
+
+
+   <div class ="col">
   <form>
   <div class="form-row">
-    <div class="form-group col-md-6">
+    <div class="form-group col-md-12">
       <label for="inputEmail4">ID:</label>
       <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
     </div>
-    <div class="form-group col-md-6">
+    <div class="form-group col-md-12">
       <label for="inputPassword4">NOME</label>
       <input type="password" class="form-control" id="inputPassword4" placeholder="Senha">
     </div>
   </div>
-  <div class="form-group col-md-6">
+  <div class="form-group col-md-12">
     <label for="inputAddress">AVATAR:</label>
     <input type="text" class="form-control" id="inputAddress" placeholder="Rua dos Bobos, nº 0">
   </div>
-  <div class="form-group col-md-6">
+  <div class="form-group col-md-12">
     <label for="inputAddress2">EMAIL:</label>
     <input type="text" class="form-control" id="inputAddress2" placeholder="Apartamento, hotel, casa, etc.">
   </div>
   <div class="form-row">
-    <div class="form-group col-md-6">
+    <div class="form-group col-md-12">
       <label for="inputCity">ANIVERSÁRIO:</label>
       <input type="text" class="form-control" id="inputCity">
     </div>
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-5">
       <label for="inputEstado">GENERO:</label>
       <select id="inputEstado" class="form-control">
         <option selected>Escolher...</option>
@@ -77,11 +38,11 @@
       </select>
     </div>
     
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-4">
       <label for="inputCEP">ALTURA:</label>
       <input type="text" class="form-control" id="inputCEP">
     </div>
-     <div class="form-group col-md-2">
+     <div class="form-group col-md-4">
       <label for="inputCEP">PESO:</label>
       <input type="text" class="form-control" id="inputCEP">
     </div>
@@ -93,11 +54,51 @@
     <button type="submit" class="btn btn-primary">Cancelar</button>
 </form>
   
+</div>
 
-<div>
-
+<div class ="col">
+ <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">ID</th>
+      <th scope="col">NOME</th>
+      <th scope="col">AVATAR</th>
+      <th scope="col">EMAIL</th>
+      <th scope="col">ANIVERSÁRIO</th>
+      <th scope="col">PESO kg</th>
+      <th scope="col">ALTURA</th>
+      
+      
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>1</td>
+      <td>Emerson</td>
+      <td>@mdo</td>
+      <td>emersn@gmail.com</td>
+      <td>07/01/1983</td>
+      <td>88</td>
+        <td>1,77</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>2</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+      <td>03/02/1977</td>
+      <td>88</td>
+      <td>1,90</td>
+    </tr>
+   
+  </tbody>
+</table>
 </div>
 
 
 
+
+</div>
 
