--- a/src/app/membro/membro.component.html
+++ b/src/app/membro/membro.component.html
@@ -27,9 +27,9 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let fornec of fornecedores" >  
-      <td>{{ fornec.id}}</td>
-      <td>{{ fornec.nome}}</td>
+    <tr *ngFor="let mem of membros" >  
+      <td>{{ mem.id}}</td>
+      <td>{{ mem.nome}}</td>
       <td><button  class="btn btn-primary">Delete</button></td>
        <td><button   class="btn btn-warning">Editar</button></td>
       
