Tela agendamento de treino definida

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,14 @@
 <nav>
   
   <ul>
+  <li><a routerLink="/principal" routerLinkActive="active">Principal</a></li>
     <li><a routerLink="/membro" routerLinkActive="active">Membros</a></li>
     <li><a routerLink="/items" routerLinkActive="active">Produtos</a></li>
+    <li><a routerLink="/agendartreino" routerLinkActive="active">Agendar treino</a></li>
+    <li><a routerLink="/items" routerLinkActive="active">Treinos</a></li>
+     <li><a routerLink="/items" routerLinkActive="active">Produtos</a></li>
+      <li><a routerLink="/cadagendartreino" routerLinkActive="active">Agendar Treino</a></li>
+     
   </ul>
 </nav>
 <router-outlet></router-outlet>
