--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,104 +1,94 @@
- 
- <div class="container">
- 
+<div class="container">
   <div class="row row-cols- 2">
-   
+    <div class="col">
+      <form>
+        <div class="form-row">
+          <div class="form-group col-md-12">
+            <label for="inputEmail4" class="form-label">Aluno</label>
+            <select class="form-select" aria-label="Default select example">
+              <option selected>Open this select menu</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+          <div class="form-group col-md-12">
+            <label for="inputPassword4">Professor</label>
 
+            <select class="form-select" aria-label="Default select example">
+              <option selected>Open this select menu</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+          <div class="form-group col-md-12">
+            <label for="inputPassword4">Treino</label>
 
-   <div class ="col">
-  <form>
-  <div class="form-row">
-    <div class="form-group col-md-12">
-      <label for="inputEmail4">ID:</label>
-      <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-    </div>
-    <div class="form-group col-md-12">
-      <label for="inputPassword4">NOME</label>
-      <input type="password" class="form-control" id="inputPassword4" placeholder="Senha">
-    </div>
-  </div>
-  <div class="form-group col-md-12">
-    <label for="inputAddress">AVATAR:</label>
-    <input type="text" class="form-control" id="inputAddress" placeholder="Rua dos Bobos, nº 0">
-  </div>
-  <div class="form-group col-md-12">
-    <label for="inputAddress2">EMAIL:</label>
-    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartamento, hotel, casa, etc.">
-  </div>
-  <div class="form-row">
-    <div class="form-group col-md-12">
-      <label for="inputCity">ANIVERSÁRIO:</label>
-      <input type="text" class="form-control" id="inputCity">
-    </div>
-    <div class="form-group col-md-5">
-      <label for="inputEstado">GENERO:</label>
-      <select id="inputEstado" class="form-control">
-        <option selected>Escolher...</option>
-        <option>...</option>
-      </select>
-    </div>
-    
-    <div class="form-group col-md-4">
-      <label for="inputCEP">ALTURA:</label>
-      <input type="text" class="form-control" id="inputCEP">
-    </div>
-     <div class="form-group col-md-4">
-      <label for="inputCEP">PESO:</label>
-      <input type="text" class="form-control" id="inputCEP">
-    </div>
-  
-  </div>
-  <div class="form-group">
-   </div>
-  <button type="submit" class="btn btn-primary">Enviar</button>
-    <button type="submit" class="btn btn-primary">Cancelar</button>
-</form>
-  
+            <select class="form-select" aria-label="Default select example">
+              <option selected>Open this select menu</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+           <label for="inputPassword4">Objetivos</label>
+          <div class="form-check">
+  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+  <label class="form-check-label" for="flexCheckDefault">
+    Default checkbox
+  </label>
 </div>
-
-<div class ="col">
- <table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">ID</th>
-      <th scope="col">NOME</th>
-      <th scope="col">AVATAR</th>
-      <th scope="col">EMAIL</th>
-      <th scope="col">ANIVERSÁRIO</th>
-      <th scope="col">PESO kg</th>
-      <th scope="col">ALTURA</th>
-      
-      
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>1</td>
-      <td>Emerson</td>
-      <td>@mdo</td>
-      <td>emersn@gmail.com</td>
-      <td>07/01/1983</td>
-      <td>88</td>
-        <td>1,77</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>2</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-      <td>03/02/1977</td>
-      <td>88</td>
-      <td>1,90</td>
-    </tr>
-   
-  </tbody>
-</table>
+<div class="form-check">
+  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+  <label class="form-check-label" for="flexCheckChecked">
+    Checked checkbox
+  </label>
 </div>
+        </div>
 
+        <div class="form-group"></div>
+        <button type="submit" class="btn btn-primary">Enviar</button>
+        <button type="submit" class="btn btn-primary">Cancelar</button>
+      </form>
+    </div>
 
-
-
+    <div class="col">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">ID</th>
+            <th scope="col">NOME</th>
+            <th scope="col">AVATAR</th>
+            <th scope="col">EMAIL</th>
+            <th scope="col">ANIVERSÁRIO</th>
+            <th scope="col">PESO kg</th>
+            <th scope="col">ALTURA</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>1</td>
+            <td>Emerson</td>
+            <td>@mdo</td>
+            <td>emersn@gmail.com</td>
+            <td>07/01/1983</td>
+            <td>88</td>
+            <td>1,77</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>2</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+            <td>03/02/1977</td>
+            <td>88</td>
+            <td>1,90</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
-
